<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <com.basso.basso.widgets.MyPreferenceCategory android:title="@string/settings_data_category" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="only_on_wifi"
            android:summary="@string/settings_download_only_on_wifi_summary"
            android:title="@string/settings_download_only_on_wifi_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="download_missing_artwork"
            android:title="@string/settings_download_missing_artwork_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="download_missing_artist_images"
            android:title="@string/settings_download_artist_images_title" />
    </com.basso.basso.widgets.MyPreferenceCategory>
    <com.basso.basso.widgets.MyPreferenceCategory android:title="@string/settings_storage_category" >
        <Preference
            android:key="delete_cache"
            android:summary="@string/settings_delete_cache_summary"
            android:title="@string/settings_delete_cache_title" />
    </com.basso.basso.widgets.MyPreferenceCategory>
    <com.basso.basso.widgets.MyPreferenceCategory android:title="@string/settings_about_category" >
        <PreferenceScreen android:title="@string/settings_about_Basso" >
            <com.basso.basso.widgets.MyPreferenceCategory android:title="@string/settings_about_category" >
                <Preference
                    android:summary="@string/settings_self_title"
                    android:title="@string/settings_author_title" />
                <Preference
                    android:key="version"
                    android:title="@string/settings_version_title" />
                <Preference
                    android:key="open_source"
                    android:title="@string/settings_open_source_licenses" />
            </com.basso.basso.widgets.MyPreferenceCategory>
        </PreferenceScreen>
    </com.basso.basso.widgets.MyPreferenceCategory>
</PreferenceScreen>
