<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/equalizer_footer_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/balance_label"
                android:text="@string/balance"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textAllCaps="true"
                android:fontFamily="sans-serif"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:background="@color/action_bar_background"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_below="@+id/balance_label"
                android:layout_width="fill_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="@android:color/white"
                    android:text="@string/left"
                    android:paddingLeft="5dp"
                    android:gravity="center"
                    android:singleLine="true"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content" />
                <SeekBar
                    android:id="@+id/balance_seekbar"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textColor="@android:color/white"
                    android:text="@string/right"
                    android:gravity="center"
                    android:singleLine="true"
                    android:paddingRight="5dp"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </RelativeLayout>


    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/presets_label"
            android:text="@string/presets"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="center"
            android:singleLine="true"
            android:textAllCaps="true"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            android:background="@color/action_bar_background"
            android:textColor="@android:color/white"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_below="@+id/presets_label"
            android:paddingTop="10dp"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/save_equalizer_preset"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:textColor="@color/action_bar_background"
                android:background="@drawable/button_shuffle_header"
                android:textSize="14sp"
                android:singleLine="true"
                android:text="@string/save_preset"
                android:layout_height="40dp" />
            <Button
                android:id="@+id/delete_equalizer_preset"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:singleLine="true"
                android:textColor="@color/action_bar_background"
                android:background="@drawable/button_shuffle_header"
                android:textSize="14sp"
                android:text="@string/delete_preset"
                android:layout_height="40dp" />
            <Spinner
                android:id="@+id/spinner"
                android:popupBackground="@android:color/white"
                android:background="@android:color/white"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="40dp"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>




